build: 升级依赖版本、修改gradle-wrapper、gradlew