@@ -325,17 +325,6 @@ configure(subprojects.findAll { (!excludeSubProjects.contains(it.name)) }) { pro
                 '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
                 '--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED',
                 '--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
-                '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-                '--add-opens=java.base/java.util=ALL-UNNAMED',
-                '--add-opens=java.base/sun.net=ALL-UNNAMED',
-                '--add-opens=java.base/java.math=ALL-UNNAMED',
-                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED',
-                '--add-opens=java.base/sun.net=ALL-UNNAMED',
-                '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
-                '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
-                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
                 '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
                 '--add-exports=java.desktop/sun.font=ALL-UNNAMED'
         ]
